Fixes an issue with alignments not working in MSAViewer.js and issues with no logging when jobs fail.

--- a/CarbaResist-Web/src/main/resources/static/css/carbaresist.css
+++ b/CarbaResist-Web/src/main/resources/static/css/carbaresist.css
@@ -15,3 +15,7 @@ and open the template in the editor.
 .accordion-toggle {
     cursor: pointer;
 }
+
+.card-body {
+    overflow-x: auto;
+}
